--- a/resources/assets/less/bem/chat-message-item.less
+++ b/resources/assets/less/bem/chat-message-item.less
@@ -30,11 +30,6 @@
     justify-content: space-between;
   }
 
-  &__error {
-    font-style: italic;
-    opacity: 0.2;
-  }
-
   &__status {
     color: hsla(var(--hsl-h1), 0.5);
     margin-left: 10px;
